Genel düzenleme ve temizlik

--- a/jargons/v8.md
+++ b/jargons/v8.md
@@ -4,4 +4,4 @@ tags:
 - javascript
 ---
 
-Chrome içerisinde kullanılan JavaScript motorunun adı.
+Chrome içerisinde kullanılan [JavaScript](/javascript) motorunun adı.
