--- a/jargons/i18n.md
+++ b/jargons/i18n.md
@@ -6,4 +6,4 @@ tags:
 - çeviri
 ---
 
-yazılım dünyasında, bir yazılımın en az 2 locale ile çalışması için gerekli alt yapıyı yaratmaya yarayan tekniklerin tümüne verilen genel addır.
+yazılım dünyasında, bir yazılımın en az 2 [locale](/baska-jargona-link) ile çalışması için gerekli alt yapıyı yaratmaya yarayan tekniklerin tümüne verilen genel addır.
